--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="arm_right">Right Arm</string>
     <string name="unlocked">Unlocked</string>
     <string name="locked">Locked</string>
+    <string name="address">ITC Gardenia level road</string>
 </resources>
